--- a/index.html
+++ b/index.html
@@ -35,22 +35,28 @@
       <div class="right-icons">
        <ul>
         <li>
-         <a href="#">
-          <i class="fa fa-twitter">
+          <a href="https://www.linkedin.com/in/clievins-selva-02594419a/" target="_blank">
+            <img src="assets/images/linkedin-logo.png" alt="Linkedin Logo" style="width: 20px; height: 20px;">
           </i>
          </a>
         </li>
         <li>
-         <a href="#">
-          <i class="fa fa-behance">
-          </i>
+          <a href="https://www.researchgate.net/profile/Clievins-Selva" target="_blank">
+            <img src="assets/images/researchgate-logo_whiteet.png" alt="ResearchGate Logo" style="width: 20px; height: 20px;">
+          </a>
+        </li>
+         </a>
+         <li>
+          <a href="https://github.com/selvastics" target="_blank">
+            <img src="assets/images/github-logo.png" alt="Github Logo" style="width: 20px; height: 20px;">
+          </a>
+        </li>
          </a>
         </li>
         <li>
-         <a href="#">
-          <i class="fa fa-linkedin">
-          </i>
-         </a>
+          <a href="https://orcid.org/my-orcid?orcid=0000-0001-9980-7127" target="_blank">
+            <img src="assets/images/orcid-logo_white.png" alt="ORCID Logo" style="width: 23px; height: 23px;">
+          </a>
         </li>
        </ul>
       </div>
