Mobile optimization, logo

--- a/index.html
+++ b/index.html
@@ -70,10 +70,26 @@
       <div class="row">
           <div class="col-12">
               <nav class="main-nav">
-                  <!-- ***** Logo Start ***** -->
+                <!-- ***** Logo Start ***** -->
                   <a class="logo" href="index.html">
-                      <img src="assets/images/selvastics_d.png" alt="Selvastics logo" style="max-height: 70px; width: auto;">
+                    <img class="logo-img" src="assets/images/selvastics_d.png" alt="Selvastics logo">
                   </a>
+           
+
+              <style>
+                     .logo-img {
+                      max-height: 70px; 
+                     width: auto; 
+                 }
+
+                   @media (max-width: 768px) {
+                     .logo-img {
+                     /* Adjust these values as needed for smaller screens */
+                     position: fixed; 
+                      max-height: 10vw;
+                   }
+                }
+              </style>
                   <!-- ***** Logo End ***** -->
 
                     <!-- ***** Menu Start ***** -->
