--- a/index.html
+++ b/index.html
@@ -70,26 +70,18 @@
       <div class="row">
           <div class="col-12">
               <nav class="main-nav">
-                <!-- ***** Logo Start ***** -->
+                  <!-- ***** Logo Start ***** -->
                   <a class="logo" href="index.html">
-                    <img class="logo-img" src="assets/images/selvastics_d.png" alt="Selvastics logo">
+                      <img class="logo-img" src="assets/images/selvastics_d.png" alt="Selvastics logo" style="max-height: 70px; width: auto;">
                   </a>
-           
 
-              <style>
-                     .logo-img {
-                      max-height: 70px; 
-                     width: auto; 
-                 }
-
-                   @media (max-width: 768px) {
-                     .logo-img {
-                     /* Adjust these values as needed for smaller screens */
-                     position: fixed; 
-                      max-height: 10vw;
-                   }
-                }
-              </style>
+                  <style>
+                    @media (max-width: 500px) {
+                      .logo-img {
+                        max-height: 10vw;
+                      }
+                    }
+                  </style>
                   <!-- ***** Logo End ***** -->
 
                     <!-- ***** Menu Start ***** -->
