--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                       <li class="has-sub">
                           <a href="javascript:void(0)">SPSS</a>
                           <ul class="sub-menu">
-                            <li><a href="javascript:alert('Coming Soon!');">SPSS Overview</a></li>
+                            <li><a href="javascript:alert('Coming Soon!');">CLARA Overview</a></li>
                             <li><a href="javascript:alert('Coming Soon!');">SPSS Tutorials</a></li>
                             <li><a href="javascript:alert('Coming Soon!');">SPSS Examples</a></li>
                           </ul>
