--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <style>
                     @media (max-width: 500px) {
                       .logo-img {
-                        max-height: 10vw;
+                        max-height: 15vmin;
                       }
                     }
                   </style>
@@ -92,7 +92,7 @@
                       <li class="has-sub">
                           <a href="javascript:void(0)">SPSS</a>
                           <ul class="sub-menu">
-                            <li><a href="javascript:alert('Coming Soon!');">CLARA Overview</a></li>
+                            <li><a href="javascript:alert('Coming Soon!');">CLARA and vince Overview</a></li>
                             <li><a href="javascript:alert('Coming Soon!');">SPSS Tutorials</a></li>
                             <li><a href="javascript:alert('Coming Soon!');">SPSS Examples</a></li>
                           </ul>
