--- a/index.html
+++ b/index.html
@@ -78,10 +78,17 @@
                   <style>
                     @media (max-width: 500px) {
                       .logo-img {
-                        max-height: 15vmin;
+                        max-height: 15vw;
+                      }
+                    }
+                    
+                    @media (max-width: 300px) {
+                      .logo-img {
+                        max-height: 10vw;
                       }
                     }
                   </style>
+                  
                   <!-- ***** Logo End ***** -->
 
                     <!-- ***** Menu Start ***** -->
@@ -92,7 +99,7 @@
                       <li class="has-sub">
                           <a href="javascript:void(0)">SPSS</a>
                           <ul class="sub-menu">
-                            <li><a href="javascript:alert('Coming Soon!');">CLARA and vince Overview</a></li>
+                            <li><a href="javascript:alert('Coming Soon!');">Overview</a></li>
                             <li><a href="javascript:alert('Coming Soon!');">SPSS Tutorials</a></li>
                             <li><a href="javascript:alert('Coming Soon!');">SPSS Examples</a></li>
                           </ul>
