--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     
                     @media (max-width: 300px) {
                       .logo-img {
-                        max-height: 2vw;
+                        max-height: 1vw;
                       }
                     }
                   </style>
@@ -123,7 +123,17 @@
                       <li class="scroll-to-section"><a href="descriptives.html">About Me</a></li>
                   </ul>
                   <!-- ***** Menu End ***** -->
-
+                  <style>
+                    @media (max-width: 900px) {
+                      /* Here, replace with the existing CSS styles that set up your burger menu. */
+                      .menu-trigger {
+                        display: block;
+                      }
+                      .main-nav ul.nav {
+                        display: none;
+                      }
+                    }
+                  </style>
                   <a class='menu-trigger'>
                       <span>Menu</span>
                   </a>
