--- a/index.html
+++ b/index.html
@@ -123,17 +123,7 @@
                       <li class="scroll-to-section"><a href="descriptives.html">About Me</a></li>
                   </ul>
                   <!-- ***** Menu End ***** -->
-                  <style>
-                    @media (max-width: 900px) {
-                      /* Here, replace with the existing CSS styles that set up your burger menu. */
-                      .menu-trigger {
-                        display: block;
-                      }
-                      .main-nav ul.nav {
-                        display: none;
-                      }
-                    }
-                  </style>
+                  <!-- ***** BURGER MENU ***** -->
                   <a class='menu-trigger'>
                       <span>Menu</span>
                   </a>
