--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                           <a href="javascript:void(0)">Resources</a>
                           <ul class="sub-menu">
                               <li><a href="descriptives.html">Descriptive Statistics</a></li>
-                              <li><a href="descriptives.html">Inferential Statistics</a></li>
+                              <li><a href="inferences.html">Inferential Statistics</a></li>
                           </ul>
                       </li>
-                      <li><a href="descriptives.html">Great Articles</a></li>
+                      <li><a href="great-articals.html">Great Articles</a></li>
                       <li class="scroll-to-section"><a href="descriptives.html">About Me</a></li>
                   </ul>
                   <!-- ***** Menu End ***** -->
