--- a/descriptives.html
+++ b/descriptives.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
-  <meta content="" name="description"/>
-  <meta content="selvastics" name="author"/>
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet"/>
-  <title>
-   Selvastics: Statistics and Data Analysis Tutorials
-  </title>
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-  <!-- Additional CSS Files -->
-  <link href="assets/css/fontawesome.css" rel="stylesheet"/>
-  <link href="assets/css/templatemo-edu-meeting.css" rel="stylesheet"/>
-  <link href="assets/css/owl.css" rel="stylesheet"/>
-  <link href="assets/css/lightbox.css" rel="stylesheet"/>
-  <!--
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Template Mo">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+
+    <title>Selvastics: Statistics and Data Analysis Tutorials</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
+    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/lightbox.css">
+<!--
+
 -->
  </head>
  <body>
@@ -255,24 +263,24 @@
       </div>
     </div>
     <div class="footer">
-     <p>
-      Copyright © 2023 Selvastics. Made with &lt;3 and ☕ in Cologne, Germany. All Rights Reserved.
-     </p>
-    </div>
-   </section>
-  
-    <!-- Scripts -->
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  
-    <script src="assets/js/isotope.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/video.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/custom.js"></script>
-  </body>
-  
-  </html>
+      <p>
+       Copyright © 2023 Selvastics. Made with &lt;3 and ☕ in Cologne, Germany. All Rights Reserved.
+      </p>
+     </div>
+    </section>
+   
+     <!-- Scripts -->
+     <!-- Bootstrap core JavaScript -->
+     <script src="vendor/jquery/jquery.min.js"></script>
+     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+   
+     <script src="assets/js/isotope.min.js"></script>
+     <script src="assets/js/owl-carousel.js"></script>
+     <script src="assets/js/lightbox.js"></script>
+     <script src="assets/js/tabs.js"></script>
+     <script src="assets/js/video.js"></script>
+     <script src="assets/js/slick-slider.js"></script>
+     <script src="assets/js/custom.js"></script>
+   </body>
+   
+   </html>
