--- a/old/aboutme_old Kopie.html
+++ b/old/aboutme_old Kopie.html
@@ -161,7 +161,7 @@
 
 
   <body>
-    <section class="meetings-page" id="meetings";>
+    <section class="meetings-page" id="meetings">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -178,7 +178,8 @@
                     <br>
                     <p>Best,</p>
                     <p>Clievins Selva</p>
-                    </div>               
+                    </div>
+                    <br>
                   </div>
                 </div>
               </div>
@@ -186,26 +187,31 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
+  </body>
+  
+  <footer style="flex-shrink: 0; margin-top: -10px; margin-bottom: -10px;">
     <div class="footer">
       <p>
-       Copyright © 2023 Selvastics. Made with &lt;3 and ☕ in Cologne, Germany. All Rights Reserved.
+        Copyright © 2023 Selvastics. Made with &lt;3 and ☕ in Cologne, Germany. All Rights Reserved.
       </p>
-     </div>
-    </section>
-   
-     <!-- Scripts -->
-     <!-- Bootstrap core JavaScript -->
-     <script src="vendor/jquery/jquery.min.js"></script>
-     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-   
-     <script src="assets/js/isotope.min.js"></script>
-     <script src="assets/js/owl-carousel.js"></script>
-     <script src="assets/js/lightbox.js"></script>
-     <script src="assets/js/tabs.js"></script>
-     <script src="assets/js/video.js"></script>
-     <script src="assets/js/slick-slider.js"></script>
-     <script src="assets/js/custom.js"></script>
-   </body>
-   
-   </html>
+    </div>
+  </footer>
+  </body>
+  </html>
+  
+    <!-- Scripts -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/lightbox.js"></script>
+    <script src="assets/js/tabs.js"></script>
+    <script src="assets/js/video.js"></script>
+    <script src="assets/js/slick-slider.js"></script>
+    <script src="assets/js/custom.js"></script>
+  </body>
+  
+  </html>
