--- a/great-articals.html
+++ b/great-articals.html
@@ -120,7 +120,7 @@
                           </ul>
                       </li>
                       <li><a href="great-articals.html">Great Articles</a></li>
-                      <li class="scroll-to-section"><a href="descriptives.html">About Me</a></li>
+                      <li><a href="aboutme.html">About me</a></li>
                   </ul>
                   <!-- ***** Menu End ***** -->
                   <!-- ***** BURGER MENU ***** -->
@@ -246,24 +246,24 @@
       </div>
     </div>
     <div class="footer">
-     <p>
-      Copyright © 2023 Selvastics. Made with &lt;3 and ☕ in Cologne, Germany. All Rights Reserved.
-     </p>
-    </div>
-   </section>
-  
-    <!-- Scripts -->
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  
-    <script src="assets/js/isotope.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/video.js"></script>
-    <script src="assets/js/slick-slider.js"></script>
-    <script src="assets/js/custom.js"></script>
-  </body>
-  
-  </html>
+      <p>
+       Copyright © 2023 Selvastics. Made with &lt;3 and ☕ in Cologne, Germany. All Rights Reserved.
+      </p>
+     </div>
+    </section>
+   
+     <!-- Scripts -->
+     <!-- Bootstrap core JavaScript -->
+     <script src="vendor/jquery/jquery.min.js"></script>
+     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+   
+     <script src="assets/js/isotope.min.js"></script>
+     <script src="assets/js/owl-carousel.js"></script>
+     <script src="assets/js/lightbox.js"></script>
+     <script src="assets/js/tabs.js"></script>
+     <script src="assets/js/video.js"></script>
+     <script src="assets/js/slick-slider.js"></script>
+     <script src="assets/js/custom.js"></script>
+   </body>
+   
+   </html>
