--- a/aboutme.html
+++ b/aboutme.html
@@ -120,7 +120,7 @@
                           </ul>
                       </li>
                       <li><a href="great-articals.html">Great Articles</a></li>
-                      <li class="scroll-to-section"><a href="aboutme.html">About Me</a></li>
+                      <li><a href="aboutme.html">About me</a></li>
                   </ul>
                   <!-- ***** Menu End ***** -->
                   <!-- ***** BURGER MENU ***** -->
