--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 <!-- ***** Main Banner Area Start ***** -->
 <section class="section main-banner" data-section="section1" id="top">
-  <div style="width: 100%; height: 800px;"></div>  <!-- Placeholder div -->
+  <div style="width: 100%; height: 800px;"></div> 
   <div class="video-overlay header-text">
    <div class="container">
     <div class="row">
